Add public routes and Google OAuth support for backend

--- a/render.yaml
+++ b/render.yaml
@@ -12,8 +12,12 @@ services:
       - key: JWT_SECRET
         sync: false
       - key: FRONTEND_URL
-        value: https://bittrr-frontend.onrender.com
+        value: https://www.bittrr.com
       - key: STRIPE_SECRET_KEY
         sync: false
       - key: STRIPE_PUBLISHABLE_KEY
+        sync: false
+      - key: GOOGLE_CLIENT_ID
+        sync: false
+      - key: GOOGLE_CLIENT_SECRET
         sync: false 
