--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.10.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.3"
   },
