--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.17.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
